--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,5 +1,6 @@
-body { padding: 0; margin: 0 }
-#unity-container { position: absolute }
+body { padding: 0; margin: 0; background-image: url('../assets/platform-3.png'); background-size: cover; }
+/*  */
+#unity-container { position: absolute;background-color: white; }
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
 #unity-container.unity-mobile { width: 100%; height: 100% }
 #unity-canvas { background: #BF3B00 }
