--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,4 @@
-body { padding: 0; margin: 0; background-image: url('../assets/platform-3.png'); background-size: cover; }
+body { padding: 0; margin: 0; background-image: url('../assets/bg.png'); background-size: cover; background-position: bottom;}
 /*  */
 #unity-container { position: absolute;background-color: white; }
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
